samples/_failures_safe/1761724950_fc9e18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_433d98c0.c: In function ‘subtract_matrices’:
./samples/SAFE/__tmp_433d98c0.c:154:13: error: expected expression at end of input
  154 |             if ((b->data[i][j] > 0 && a->data[i][j] <
      |             ^~
./samples/SAFE/__tmp_433d98c0.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_433d98c0.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_433d98c0.c:154:13: error: expected declaration or statement at end of input
